# arduino-led-interface

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.b55a085  Makefile  arduino-led-interface.cbp  cmake_install.cmake
Arduino/LEDStrip/: LEDStrip.ino
InterfaceLEDStrip/: CMakeLists.txt  InterfaceLEDStrip.cbp  Makefile  RS232.cpp  RS232.h  arduino.cpp  arduino.h  arduino_config.h  cmake_install.cmake  main.cpp
Multiplus-reference/: CMakeLists.txt  Multiplus.cpp  Multiplus.h  main.cpp
Multiplus-reference/rtdbobjects/: MultiPlusData.cpp  MultiPlusData.h
PatternGenerator/: CMakeLists.txt  CMakeLists.txt~  Makefile  PatternGenerator.cbp  PatternGenerator.cpp  PatternGenerator.h  cmake_install.cmake  main.cpp
arch/rtdbobjects/: ArduinoData.cpp  ArduinoData.h  ArduinoData.h~  CMakeLists.txt~
